--- a/.github/workflows/kibot.yml
+++ b/.github/workflows/kibot.yml
@@ -18,9 +18,12 @@ jobs:
   Autogen:
     name: "Outputs"
     runs-on: ubuntu-latest
+    container: ghcr.io/inti-cmnb/kicad6_auto_full:latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: '0'
 
     - uses: INTI-CMNB/KiBot@v2_k6
       with:
