--- a/.github/workflows/kibot.yml
+++ b/.github/workflows/kibot.yml
@@ -36,5 +36,5 @@ jobs:
     - name: upload results
       uses: actions/upload-artifact@v3
       with:
-        name: AutomaticOutputs-$GITHUB_SHA
+        name: AutomaticOutputs-${GITHUB_SHA}
         path: Output
