--- a/.github/workflows/kibot.yml
+++ b/.github/workflows/kibot.yml
@@ -15,6 +15,9 @@ on:
       - '**kibot.yml'
 
 jobs:
+  GetShortHash:
+    name: "Retrieve short hash"
+    run: echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_ENV
   Autogen:
     name: "Outputs"
     runs-on: ubuntu-latest
@@ -26,7 +29,7 @@ jobs:
         fetch-depth: '0'
         
     - name: Get short hash for output
-      run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+        run: echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_ENV
 
     - uses: INTI-CMNB/KiBot@v2_k6
       with:
@@ -36,5 +39,5 @@ jobs:
     - name: upload results
       uses: actions/upload-artifact@v3
       with:
-        name: AutomaticOutputs-${GITHUB_SHA}
+        name: AutomaticOutputs-$GITHUB_SHA_SHORT
         path: Output
