--- a/.github/workflows/kibot.yml
+++ b/.github/workflows/kibot.yml
@@ -17,7 +17,10 @@ on:
 jobs:
   GetShortHash:
     name: "Retrieve short hash"
-    run: echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_ENV
+    runs-on: ubuntu-latest
+    steps:
+    - name: Get short hash for output
+      run: echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_ENV
   Autogen:
     name: "Outputs"
     runs-on: ubuntu-latest
@@ -27,9 +30,6 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
-        
-    - name: Get short hash for output
-      run: echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_ENV
 
     - uses: INTI-CMNB/KiBot@v2_k6
       with:
