--- a/.github/workflows/kibot.yml
+++ b/.github/workflows/kibot.yml
@@ -15,12 +15,6 @@ on:
       - '**kibot.yml'
 
 jobs:
-  GetShortHash:
-    name: "Retrieve short hash"
-    runs-on: ubuntu-latest
-    steps:
-    - name: Get short hash for output
-      run: echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_ENV
   Autogen:
     name: "Outputs"
     runs-on: ubuntu-latest
@@ -39,5 +33,5 @@ jobs:
     - name: upload results
       uses: actions/upload-artifact@v3
       with:
-        name: DesignOutputs.${{ env.GITHUB_SHA_SHORT }}
+        name: DesignOutputs.${{ env.GITHUB_SHA }}
         path: Output
