Removing attempts at including hash, adding mount holes to schematic

--- a/.github/workflows/kibot.yml
+++ b/.github/workflows/kibot.yml
@@ -33,5 +33,5 @@ jobs:
     - name: upload results
       uses: actions/upload-artifact@v3
       with:
-        name: DesignOutputs.${{ env.GITHUB_SHA }}
+        name: DesignOutputs
         path: Output
